--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,23 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&family=Nunito:wght@400;800&display=swap');
+
+*{
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;
+}
+
 .login-container {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(to right, #cb232c, #9F0AD3)
+  background-color: #fff59d;
 }
-
 
 .login-box {
   display: flex;
   flex-direction: column;
-  background-color: #fff;
+  background-color: #1b3039;
   text-align: center;
   padding: 20px 25px;
-  box-shadow: 0px 5px 10px rgba(71, 3, 6, 0.7);
+  border-radius: 25px;
 }
 
-.login-box title{
-  color: #252525;
+.welcome-message{
+  color: white;
   font-size: 35px;
   font-weight: 800;
   margin-bottom: 30px;
@@ -26,10 +32,8 @@
 .input-container {
   margin-bottom: 50px;
   margin-top: 20px;
-  background-color: aquamarine;
-  text-align: center;
+  text-align: left;
   border-radius: 10px;
-  border-color: rgb(91, 185, 185);
 }
 
 .input-control {
@@ -42,11 +46,15 @@
 }
 
 .signin-button {
-  text-align: end;
-  background-color: rgb(107, 90, 90);
+  text-align: center;
+  background-color: black;
   border-radius: 10px;
   color: white;
   font-size: 18px;
   padding: 10px;
   cursor: pointer;
+}
+
+p {
+  color: red;
 }
